// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`{el.formTyppe} Form renders a snapshot properly 1`] = `
<div>
  <h1>
    Register
  </h1>
  <hr />
  <br />
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        className="form-control input.lg"
        name="username"
        onChange={undefined}
        placeholder="Username"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input.lg"
        name="email"
        onChange={undefined}
        placeholder="Email"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input.lg"
        name="password"
        onChange={undefined}
        placeholder="Password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="btn btn-primary btn-lg btn-block"
      type="submit"
      value="Register"
    />
  </form>
</div>
`;

exports[`{el.formTyppe} Form renders a snapshot properly 2`] = `
<div>
  <h1>
    Login
  </h1>
  <hr />
  <br />
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        className="form-control input.lg"
        name="email"
        onChange={undefined}
        placeholder="Email"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input.lg"
        name="password"
        onChange={undefined}
        placeholder="Password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="btn btn-primary btn-lg btn-block"
      type="submit"
      value="Login"
    />
  </form>
</div>
`;
